service.yml
apiVersion: v1
kind: Service
metadata:
  name: underdico-service
  labels:
    app: underdico
spec:
  type: NodePort
  selector:
    app: underdico
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
