ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: underdico-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: tls-secret
  backend:
    serviceName: underdico-service
    servicePort: 80
